[tool.poetry]
name = "botasaurus"
version = "3.4.28-beta"
description = "The All in One Web Scraping Framework"
authors = ["Chetan Jain <chetan@omkar.cloud>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
packaging = "^23.2"
psutil = "^5.9.8"
javascript-fixes = "^1.1.18"
requests = "^2.31.0"
joblib = "^1.3.2"
beautifulsoup4 = "^4.11.2"
chromedriver-autoinstaller-fix = "^1.0.6"
cloudscraper = "^1.2.71"
selenium = "4.5.0"
botasaurus-proxy-authentication = "^1.0.12"
capsolver-extension-python = "^1.0.1"
lxml = "^5.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
